--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "lucide-react": "^0.553.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.2.7",
+    "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
