--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -9,6 +9,10 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    env:
+      # Work around Rollup native binary issue in GitHub Actions
+      ROLLUP_SKIP_NODEJS_NATIVE: "true"
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -20,7 +24,8 @@ jobs:
 
       - name: Install dependencies
         working-directory: frontend
-        run: npm ci
+        # omit optional deps so npm doesn't choke on rollup native package
+        run: npm install --omit=optional
 
       - name: Build frontend
         working-directory: frontend
