--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,5 +27,8 @@
     "tailwindcss": "^3.4.14",
     "typescript": "^5.5.4",
     "vite": "^5.4.1"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.53.2"
   }
 }
