--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,5 @@
 _API_URL="http://3.148.229.29:8000"
 
-const VITE_API_URL = "http://healthcare-dev-alb-985138781.us-east-2.elb.amazonaws.com";
+VITE_API_URL=http://healthcare-dev-alb-985138781.us-east-2.elb.amazonaws.com
+
+x
